...
    <string name="core_designsystem_bottom_menu_stations">Stations</string>
    <string name="core_designsystem_bottom_menu_news">News</string>
    <string name="core_designsystem_bottom_menu_favorites">Favorites</string>
    <!-- Button -->
    <string name="core_designsystem_button_open_in_browser">Open in browser</string>
    <string name="core_designsystem_button_how_to_get_access">How to get access?</string>
    <string name="core_designsystem_onboarding_button_skip">Skip</string>
    <!-- Description -->
    <string name="core_designsystem_description_share_icon" translatable="false">Toolbar share icon</string>
    <string name="core_designsystem_description_filter_icon" translatable="false">Toolbar filter icon</string>
    <string name="core_designsystem_description_search_icon" translatable="false">Toolbar search icon</string>
    <string name="core_designsystem_description_support_icon" translatable="false">Toolbar support icon</string>
    <string name="core_designsystem_description_cabinet_icon" translatable="false">Toolbar cabinet icon</string>
...
