...
        Button(
            onClick = onButtonClick,
            colors = ButtonDefaults.buttonColors(containerColor = Blue, contentColor = White),
            shape = MMShapes.large,
            modifier = Modifier
                .height(56.dp)
                .semantics { contentDescription = "Next" }
        ) {
            AnimatedVisibility(visible = index != 2) {
                Icon(
                    imageVector = MMIcons.KeyboardArrowRight,
                    tint = White,
                    contentDescription = stringResource(SharedRes.strings.feature_onboarding_description_next_icon)
...
