...
        navigationIcon = {
            if (shouldShowNavigationButton) {
                MMToolbarAction(
                    icon = MMIcons.ArrowBackFilled,
                    contentDescription = stringResource(R.string.core_designsystem_description_nav_icon),
                    onClick = onNavigationClick,
                    modifier = Modifier.semantics { contentDescription = "Back" }
                )
            }
        },
        actions = {
            TextButton(onClick = onSkipActionClick) {
                Text(
...
